fix: Use bitnami image for kafka

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,70 +1,85 @@
-version: "3.7"
+version: "3.9"
 
 x-kafka-common: &kafka-common
-  image: confluentinc/cp-kafka:7.2.1.arm64
-  restart: on-failure
-  healthcheck:
-    test: curl --user superUser:superUser -fail --silent --insecure https://kafka1:8091/kafka/v3/clusters/ --output /dev/null || exit 1
-    interval: 10s
-    retries: 25
-    start_period: 20s
-  volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
+  image: bitnami/kafka:2.8.1
+  expose:
+    - 9092
+  networks:
+    - kafkanet
+  environment: &environment-common
+    ALLOW_PLAINTEXT_LISTENER: yes
+    KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
+    KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+    KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
   depends_on:
-    zookeeper:
-      condition: service_started
+    - zookeeper
 
 services:
   zookeeper:
+    image: bitnami/zookeeper:3.5
     container_name: zookeeper
-    image: confluentinc/cp-zookeeper:7.2.1.arm64
-    restart: always
-    healthcheck:
-      test: echo srvr | nc zookeeper 2181 || exit 1
-      retries: 20
-      interval: 10s
+    ports:
+      - "2181"
+    networks:
+      - kafkanet
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
     volumes:
-      - ./zookeeper/data:/kafka/data
-      - ./zookeeper/datalog:/kafka/datalog
-    ports:
-      - "2181:2181"
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+      - zookeeper_data:/bitnami/zookeeper
 
-  kafka1:
+  kafka-node-0:
     <<: *kafka-common
-    hostname: kafka1
-    container_name: kafka1
+    container_name: kafka-node-0
     ports:
-      - "9092:9092"
+      - "29092:29092"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://127.0.0.1:9092"
-#      BOOTSTRAP_SERVERS: kafka1:9091, kafka2:9092, kafka3:9093
+      <<: *environment-common
+      KAFKA_CFG_BROKER_ID: 0
+      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29092
+      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-0:9092,EXTERNAL://localhost:29092
+    volumes:
+      - kafka_0_data:/bitnami/kafka
+  
+  kafka-node-1:
+    <<: *kafka-common
+    container_name: kafka-node-1
+    ports:
+      - "29093:29093"
+    environment:
+      <<: *environment-common
+      KAFKA_CFG_BROKER_ID: 1
+      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29093
+      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-1:9092,EXTERNAL://localhost:29093
+    volumes:
+      - kafka_1_data:/bitnami/kafka
+  
+  kafka-node-2:
+    <<: *kafka-common
+    container_name: kafka-node-2
+    ports:
+      - "29094:29094"
+    environment:
+      <<: *environment-common
+      KAFKA_CFG_BROKER_ID: 2
+      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29094
+      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-2:9092,EXTERNAL://localhost:29094
+    volumes:
+      - kafka_2_data:/bitnami/kafka
 
-#  kafka2:
-#    <<: *kafka-common
-#    hostname: kafka2
-#    container_name: kafka2
-#    ports:
-#      - "9093:9093"
-#    environment:
-#      KAFKA_BROKER_ID: 2
-#      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-#      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://127.0.0.1:9093"
-#      BOOTSTRAP_SERVERS: kafka1:9091, kafka2:9092, kafka3:9093
-#
-#  kafka3:
-#    <<: *kafka-common
-#    hostname: kafka3
-#    container_name: kafka3
-#    ports:
-#      - "9094:9092"
-#    environment:
-#      KAFKA_BROKER_ID: 3
-#      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-#      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://127.0.0.1:9093
-#      BOOTSTRAP_SERVERS: kafka1:9091, kafka2:9092, kafka3:9093
+networks:
+  kafkanet:
+    name: kafka-network
+
+volumes:
+  zookeeper_data:
+    driver: local
+    name: zookeeper_data
+  kafka_0_data:
+    driver: local
+    name: kafka_0_data
+  kafka_1_data:
+    driver: local
+    name: kafka_1_data
+  kafka_2_data:
+    driver: local
+    name: kafka_2_data
