--- a/trino/docker/trino-gateway/Dockerfile
+++ b/trino/docker/trino-gateway/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /etc/trino-gateway
 
 RUN apt-get -y update && apt-get -y install curl
 
-ENV VERSION=4
+ARG VERSION
+ARG JAR_FILE
 
-RUN curl https://repo1.maven.org/maven2/io/trino/gateway/gateway-ha/${VERSION}/gateway-ha-${VERSION}-jar-with-dependencies.jar -o gateway-ha.jar
+RUN curl https://repo1.maven.org/maven2/io/trino/gateway/gateway-ha/${VERSION}/gateway-ha-${VERSION}-jar-with-dependencies.jar -o ${JAR_FILE}
