--- a/trino/docker/trino/etc-coordinator-2/config.properties
+++ b/trino/docker/trino/etc-coordinator-2/config.properties
@@ -1,6 +1,7 @@
 coordinator=true
-node-scheduler.include-coordinator=true
+node-scheduler.include-coordinator=false
 http-server.http.port=8080
+discovery-server.enabled=true
 discovery.uri=http://trino-2:8080
 
 http-server.process-forwarded=true
