--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,30 +1,23 @@
 version: "3.7"
 
 services:
-  db:
+  mysql:
     container_name: mysql
-    image: arm64v8/mysql:oracle
+    hostname: mysql
+    image: mysql:8.0
     ports:
       - "3306:3306"
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
-    networks:
-      - backends
     volumes:
-      - mysql:/var/lib/mysql/
-      - ./src/main/resources/sql:/docker-entrypoint-initdb.d/
+      - ./docker/volume/mysql:/var/lib/mysql
+      - ./docker/mysql/:/docker-entrypoint-initdb.d/
     env_file: .env
     environment:
       - TZ=Asia/Seoul
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DATABASE=test_db
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-.dev}
     restart: always
-
-networks:
-  backends:
-
-volumes:
-  mysql:
