--- a/dbt/docker/hive-metastore/.env
+++ b/dbt/docker/hive-metastore/.env
@@ -1,9 +1,9 @@
-HIVE_METASTORE_JDBC_URL="jdbc:postgresql://postgres:5432/metastore"
+HIVE_METASTORE_JDBC_URL="jdbc:postgresql://postgres:5432/hive"
 HIVE_METASTORE_DRIVER="org.postgresql.Driver"
 HIVE_METASTORE_USER="hive"
 HIVE_METASTORE_PASSWORD="hive"
 HIVE_METASTORE_USERS_IN_ADMIN_ROLE="admin"
-HIVE_METASTORE_WAREHOUSE_DIR="s3://metastore/"
+HIVE_METASTORE_WAREHOUSE_DIR="s3://hive/"
 S3_ENDPOINT="http://minio:9000"
 S3_ACCESS_KEY="minio"
 S3_SECRET_KEY="minio123"
