--- a/flink/docker-compose.yml
+++ b/flink/docker-compose.yml
@@ -1,70 +1,25 @@
 version: "3.9"
 
-x-kafka-common: &kafka-common
-  image: bitnami/kafka:3.3.2
-  environment: &environment-common
-    ALLOW_PLAINTEXT_LISTENER: yes
-    KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
-    KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
-    KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
-  depends_on:
-    - zookeeper
-  healthcheck:
-    test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic <TOPIC_NAME> --describe"]
-    interval: 5s
-    timeout: 10s
-    retries: 3
-
 services:
-  zookeeper:
-    image: bitnami/zookeeper:3.7.2
-    container_name: zookeeper
+  kafka:
+    container_name: kafka
+    image: bitnami/kafka:3.4.1
     ports:
-      - "2181:2181"
+      - "9092:9092"
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      # KRaft settings
+      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_PROCESS_ROLES: controller,broker
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
+      # Listeners
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://:9092
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
     volumes:
-      - ./docker/volume/kafka/zookeeper:/bitnami/zookeeper
-
-  kafka-node-0:
-    <<: *kafka-common
-    container_name: kafka-node-0
-    ports:
-      - "29092:29092"
-    environment:
-      <<: *environment-common
-      KAFKA_CFG_BROKER_ID: 0
-      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29092
-      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-0:9092,EXTERNAL://localhost:29092
-    volumes:
-      - ./docker/volume/kafka/node_0:/bitnami/kafka
+      - ./docker/volume/kafka:/bitnami/kafka
   
-  kafka-node-1:
-    <<: *kafka-common
-    container_name: kafka-node-1
-    ports:
-      - "29093:29093"
-    environment:
-      <<: *environment-common
-      KAFKA_CFG_BROKER_ID: 1
-      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29093
-      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-1:9092,EXTERNAL://localhost:29093
-    volumes:
-      - ./docker/volume/kafka/node_1:/bitnami/kafka
-  
-  kafka-node-2:
-    <<: *kafka-common
-    container_name: kafka-node-2
-    ports:
-      - "29094:29094"
-    environment:
-      <<: *environment-common
-      KAFKA_CFG_BROKER_ID: 2
-      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:29094
-      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka-node-2:9092,EXTERNAL://localhost:29094
-    volumes:
-      - ./docker/volume/kafka/node_2:/bitnami/kafka
-
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
@@ -84,7 +39,6 @@ services:
 
   postgres:
     container_name: postgres
-    hostname: postgres
     image: postgres:14-alpine
     ports:
       - "5432:5432"
