--- a/flink/docker-compose.yml
+++ b/flink/docker-compose.yml
@@ -36,82 +36,84 @@ services:
       retries: 3
       start_period: 30s
 
-  postgres:
-    container_name: postgres
-    image: postgres:14-alpine
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - ./docker/volume/postgres:/var/lib/postgresql/data
-      - ./docker/postgres/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
-    healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "postgres" ]
-      interval: 10s
-      retries: 3
-      start_period: 5s
+  # postgres:
+  #   container_name: postgres
+  #   image: postgres:14-alpine
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #   volumes:
+  #     - ./docker/volume/postgres:/var/lib/postgresql/data
+  #     - ./docker/postgres/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
+  #   healthcheck:
+  #     test: [ "CMD", "pg_isready", "-U", "postgres" ]
+  #     interval: 10s
+  #     retries: 3
+  #     start_period: 5s
 
-  minio:
-    container_name: minio
-    hostname: minio
-    image: minio/minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio123
-      MINIO_DOMAIN: minio
-    command: server /data --console-address ":9001"
-    healthcheck:
-      test: "mc ready local"
-      interval: 10s
-      retries: 3
-      start_period: 5s
+  # minio:
+  #   container_name: minio
+  #   hostname: minio
+  #   image: minio/minio
+  #   ports:
+  #     - "9000:9000"
+  #     - "9001:9001"
+  #   environment:
+  #     MINIO_ROOT_USER: minio
+  #     MINIO_ROOT_PASSWORD: minio123
+  #     MINIO_DOMAIN: minio
+  #   command: server /data --console-address ":9001"
+  #   healthcheck:
+  #     test: "mc ready local"
+  #     interval: 10s
+  #     retries: 3
+  #     start_period: 5s
 
-  minio-client:
-    container_name: minio-client
-    hostname: minio-client
-    image: minio/mc
-    entrypoint: >
-      /bin/bash -c "
-      mc config --quiet host add storage http://minio:9000 minio minio123 || true;
-      mc mb --quiet --ignore-existing storage/hive || true;
-      "
-    environment:
-      AWS_ACCESS_KEY_ID: minio
-      AWS_SECRET_ACCESS_KEY: minio123
-      S3_ENDPOINT: http://minio:9000
-      S3_PATH_STYLE_ACCESS: true
-    depends_on:
-      minio:
-        condition: service_healthy
+  # minio-client:
+  #   container_name: minio-client
+  #   hostname: minio-client
+  #   image: minio/mc
+  #   entrypoint: >
+  #     /bin/bash -c "
+  #     mc config --quiet host add storage http://minio:9000 minio minio123 || true;
+  #     mc mb --quiet --ignore-existing storage/hive || true;
+  #     "
+  #   environment:
+  #     AWS_ACCESS_KEY_ID: minio
+  #     AWS_SECRET_ACCESS_KEY: minio123
+  #     S3_ENDPOINT: http://minio:9000
+  #     S3_PATH_STYLE_ACCESS: true
+  #   depends_on:
+  #     minio:
+  #       condition: service_healthy
 
-  hive-metastore:
-    container_name: hive-metastore
-    hostname: hive-metastore
-    image: starburstdata/hive:3.1.3-e.6
-    ports:
-      - "9083:9083"
-    env_file:
-      - ./docker/hive-metastore/.env
-    depends_on:
-      postgres:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
-    healthcheck:
-      test: "netstat -lpn | grep 9083"
-      interval: 10s
-      retries: 3
-      start_period: 5s
+  # hive-metastore:
+  #   container_name: hive-metastore
+  #   hostname: hive-metastore
+  #   image: starburstdata/hive:3.1.3-e.6
+  #   ports:
+  #     - "9083:9083"
+  #   env_file:
+  #     - ./docker/hive-metastore/.env
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     minio:
+  #       condition: service_healthy
+  #   healthcheck:
+  #     test: "netstat -lpn | grep 9083"
+  #     interval: 10s
+  #     retries: 3
+  #     start_period: 5s
 
   flink-jobmanager:
     container_name: flink-jobmanager
     hostname: flink-jobmanager
-    image: flink:1.18.1-scala_2.12-java17
+    build:
+      dockerfile: ./docker/flink/Dockerfile
+    image: flink-dev
     ports:
       - "8081:8081"
     command: jobmanager
@@ -123,9 +125,22 @@ services:
   flink-taskmanager:
     container_name: flink-taskmanager
     hostname: flink-taskmanager
-    image: flink:1.18.1-scala_2.12-java17
+    build:
+      dockerfile: ./docker/flink/Dockerfile
+    image: flink-dev
     command: taskmanager
     environment:
       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
     volumes:
       - ./docker/volume/flink/taskmanager:/data/flink
+
+  # flink-sql-client:
+  #   image: flink:latest
+  #   command: bin/sql-client.sh
+  #   depends_on:
+  #     - flink-jobmanager
+  #   environment:
+  #     - |
+  #       FLINK_PROPERTIES=
+  #       jobmanager.rpc.address: jobmanager
+  #       rest.address: jobmanager   
