--- a/flink/producer/requirements.txt
+++ b/flink/producer/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.110.1
+pydantic==2.6.4
 kafka-python==2.0.2
 uvicorn[standard]==0.29.0
 pandas==2.2.1
-duckdb==0.10.1
 requests==2.31.0
 urllib3==1.26.6
