--- a/flink/docker-compose.yml
+++ b/flink/docker-compose.yml
@@ -18,7 +18,12 @@ services:
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
     volumes:
       - ./docker/volume/kafka:/bitnami/kafka
-  
+    healthcheck:
+      test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
+      start_period: 5s
+      interval: 5s
+      retries: 3
+
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
@@ -31,10 +36,10 @@ services:
       - ./docker/kafka-ui/config.yml:/etc/kafkaui/dynamic_config.yaml
     healthcheck:
       test: wget --no-verbose --tries=1 --spider localhost:8080 || exit 1
+      start_period: 10s
       interval: 5s
       timeout: 10s
       retries: 3
-      start_period: 30s
 
   # postgres:
   #   container_name: postgres
@@ -108,39 +113,40 @@ services:
   #     retries: 3
   #     start_period: 5s
 
-  flink-jobmanager:
-    container_name: flink-jobmanager
-    hostname: flink-jobmanager
-    build:
-      dockerfile: ./docker/flink/Dockerfile
-    image: flink-dev
-    ports:
-      - "8081:8081"
-    command: jobmanager
-    environment:
-      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-    volumes:
-      - ./docker/volume/flink/jobmanager:/data/flink
-
-  flink-taskmanager:
-    container_name: flink-taskmanager
-    hostname: flink-taskmanager
-    build:
-      dockerfile: ./docker/flink/Dockerfile
-    image: flink-dev
-    command: taskmanager
-    environment:
-      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-    volumes:
-      - ./docker/volume/flink/taskmanager:/data/flink
-
-  # flink-sql-client:
-  #   image: flink:latest
-  #   command: bin/sql-client.sh
-  #   depends_on:
-  #     - flink-jobmanager
+  # flink-jobmanager:
+  #   container_name: flink-jobmanager
+  #   hostname: flink-jobmanager
+  #   build:
+  #     dockerfile: ./docker/flink/Dockerfile
+  #   image: flink-dev
+  #   ports:
+  #     - "8081:8081"
+  #   command: jobmanager
   #   environment:
-  #     - |
-  #       FLINK_PROPERTIES=
-  #       jobmanager.rpc.address: jobmanager
-  #       rest.address: jobmanager   
+  #     - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
+  #   volumes:
+  #     - ./docker/volume/flink/jobmanager:/data/flink
+
+  # flink-taskmanager:
+  #   container_name: flink-taskmanager
+  #   hostname: flink-taskmanager
+  #   build:
+  #     dockerfile: ./docker/flink/Dockerfile
+  #   image: flink-dev
+  #   command: taskmanager
+  #   environment:
+  #     - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
+  #   volumes:
+  #     - ./docker/volume/flink/taskmanager:/data/flink
+
+  producer:
+    container_name: kafka-producer
+    build:
+      dockerfile: ./docker/producer/Dockerfile
+    image: kafka-producer
+    ports:
+      - "8082:8082"
+    command: "uvicorn app.main:app --host 0.0.0.0 --port 8082"
+    depends_on:
+      kafka: 
+        condition: service_healthy
