--- a/spark/docker-compose.yml
+++ b/spark/docker-compose.yml
@@ -1,34 +1,10 @@
-version: "3.9"
-
 services:
-  glue_spark_submit:
-    profiles: [ "spark-submit" ]
-    container_name: glue_spark_submit
-    image: amazon/aws-glue-libs:glue_libs_4.0.0_image_01
-    environment:
-      DISABLE_SSL: true
-      WORKSPACE_LOCATION: ./workspace/
+  spark:
+    image: spark:3.5.1
+    container_name: spark
     ports:
-      - '4040:4040'
-      - '18080:18080'
+      - "4040:4040"
+      - "8888:8888"
     volumes:
-      - ~/.aws:/home/glue_user/.aws
-      - ./workspace/:/home/glue_user/workspace/
-    command: spark-submit /home/glue_user/workspace/pyspark/sample.py
-
-  glue_spark_jupyter:
-    profiles: [ "spark-jupyter" ]
-    container_name: glue_spark_jupyter
-    image: amazon/aws-glue-libs:glue_libs_4.0.0_image_01
-    environment:
-      DISABLE_SSL: true
-      JUPYTER_WORKSPACE_LOCATION: ./jupyter_workspace/
-    ports:
-      - '4040:4040'
-      - '18080:18080'
-      - '8998:8998'
-      - '8888:8888'
-    volumes:
-      - ~/.aws:/home/glue_user/.aws
-      - ./workspace/jupyter/:/home/glue_user/workspace/jupyter_workspace/
-    command: /home/glue_user/jupyter/jupyter_start.sh
+      - ./docker/volume:/home/spark
+    command: sleep infinity
