--- a/clickhouse/docker-compose.yml
+++ b/clickhouse/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   ch_server:
     image: clickhouse/clickhouse-server
@@ -7,7 +5,7 @@ services:
       - "8123:8123"
     restart: always
     volumes:
-      - ./db:/var/lib/clickhouse
+      - ./docker/volume:/var/lib/clickhouse
 
   ch_client:
     image: clickhouse/clickhouse-client
