--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -17,5 +17,5 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-.dev}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-dev}
     restart: always
